--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-dom": "18.2.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3",
-    "unsplash-js": "^7.0.19"
+    "typescript": "5.3.3"
   }
 }
